# paris_goal

./: .gitignore  16-netcdf_xarray.ipynb  README.md  pyproject.toml
paris_goal.egg-info/: SOURCES.txt  requires.txt
src/paris_goal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/python_template/: cli.py
